Change the light highlight color to match dark-ish (#692)

--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -104,7 +104,7 @@ $zorroa-nearwhite  : $zorroa-color-gray-light-2;
 $zorroa-white      : $zorroa-color-white;
 $zorroa-transparent: transparent;
 
-$zorroa-selected       : $zorroa-color-gray-light-1;
+$zorroa-selected       : rgba($zorroa-color-green-1, 0.25);
 $zorroa-dark-selected  : rgba($zorroa-color-green-1, 0.5);
 $zorroa-hover          : rgba($zorroa-color-black,0.1);
 $zorroa-dark-hover     : rgba($zorroa-color-white,0.2);
