Ensure the Flipbook viewer takes up full width of screen (#703)

--- a/src/components/Inspector/FlipbookViewer.scss
+++ b/src/components/Inspector/FlipbookViewer.scss
@@ -15,6 +15,7 @@ $film-strip-grabber-height: $zorroa-metric-base * 3;
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
   }
 
   &__loading-status {
