ARL-119: Add standard pan & zoom controls for PDF viewers (and fix a crash) (#708)
* Fix up media.clip to be more resilent to failures

* Removes an unused and invalid CSS rule

* ARL-119: Port the PDF viewer to PanZoom

* Incorporate PR feedback

--- a/src/components/Inspector/Controlbar.scss
+++ b/src/components/Inspector/Controlbar.scss
@@ -120,6 +120,11 @@ $options-menu-offset: $control-bar-height;
     }
   }
 
+  &__page-title {
+    // Adds a min width to avoid short titles such as (page 2/100) to jump around when the numbers increase
+    min-width: 19ex;
+  }
+
   &__title {
     @include nowrap;
     @include flexRowCenter;
@@ -127,6 +132,7 @@ $options-menu-offset: $control-bar-height;
 
   &__section {
     @include flexRowCenter;
+    min-height: 40px;
     padding: $control-bar-padding $zorroa-metric-base;
 
     & ~ & {
