--- a/src/components/Inspector/Pdf.scss
+++ b/src/components/Inspector/Pdf.scss
@@ -1,104 +1,15 @@
 @import '../../styles/core-mixins.scss';
 
 .Pdf {
-  @include flexCol;
-  @include flexAlignItemsCenter;
-  @include flexJustifyCenter;
-  @include flexOn;
   width: 100%;
+  height: 100%;
+  max-width:100%;
+  max-height:100%;
+  @include flexCenter;
 
-  position: relative;
-  img.loading {
-  }
-
-  .error {
-    color: $zorroa-faded-red;
-    font-size: 18px;
-  }
-}
-
-.Pdf-singlepage-body {
-  @include flexOn;
-  @include fullWidth;
-  @include flexRow;
-  @include flexJustifyCenter;
-  @include flexAlignItemsCenter;
-  overflow-y: auto;
-  overflow-x: auto;
-  position: relative;
-  canvas {
-    position: absolute;
-    top:0;
-
-    // center horizontally
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-  }
-}
-
-.Pdf-multipage-scroll {
-  @include flexOn;
-  @include fullWidth;
-  @include flexRow;
-  @include flexJustifyCenter;
-  overflow-y: auto;
-}
-
-.Pdf-multipage-body {
-  position: relative;
-
-  canvas {
-    position: absolute;
-    top:0;
-    left: 0;
-    right: 0;
-  }
-}
-
-.Pdf-controls {
-  @include flexRow;
-  @include flexJustifyCenter;
-  @include flexAlignItemsCenter;
-  height: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  background-color: black;
-  color: white;
-  margin-top: 12px;
-  box-shadow: 0 2px 4px 4px rgba(0,0,0,0.25);
-  border-radius: 3px;
-  div {
-    margin: 10px;
-  }
-
-  button {
-    color: white;
-    margin: 0;
-    border: none;
-    background: none;
-    font-size: 18px;
-
-    &:disabled {
-      color: $zorroa-darkgray;
-    }
-
-    &:hover:enabled {
-      color: $zorroa-sickly-green;
-    }
-  }
-}
-
-.Pdf-controls-group {
-  @include flexRow;
-  @include flexAlignItemsCenter;
-
-  .border-right {
-    border-right: 1px solid $zorroa-darkgray;
-  }
-
-  .border-left {
-    border-left: 1px solid $zorroa-darkgray;
+  &__canvas {
+    object-fit: contain;
+    width: 100vw;
+    height: 100vh;
   }
 }
