--- a/src/components/Preferences/PreferencesPane.scss
+++ b/src/components/Preferences/PreferencesPane.scss
@@ -1,42 +1,13 @@
 @import '../../styles/core-mixins.scss';
 @import '../../styles/colors.scss';
 
-$border-color: 1px solid $zorroa-lightgray;
-$sidebar-width: 240px;
-
 .PreferencesPane {
-  overflow: auto;
-  max-height: 95vh;
-  display: flex;
-  flex-direction: column;
-
-  .dark & { background-color: $zorroa-color-gray-dark-1; }
-
   &__title {
     flex-grow: 2;
   }
 
-  &__close {
-    @include zorroa-square-btn-lighten(40px);
-  }
-
-  &__body {
-    display: flex;
-  }
-
-  &__sidebar {
-      border-right: 1px solid $zorroa-color-gray-dark-3;
-      flex-basis: $sidebar-width;
-  }
-
   &__menu-link {
     cursor: pointer;
-  }
-
-  &__main {
-    max-height: 100%;
-    overflow-y: auto;
-    flex-basis: calc(100% - #{$sidebar-width});
   }
 
   &__menu {
@@ -44,10 +15,19 @@ $sidebar-width: 240px;
     list-style: none;
     margin: 0;
     font-weight: 500;
-    color: $zorroa-color-gray-dark-3;
+    color: $zorroa-color-gray-dark-2;
 
-    ~ .PreferencesPane__menu {
+    & ~ & {
+      margin-top: 10px;
+    }
+
+    & & {
+      margin-top: 10px;
       border-top: 1px solid $zorroa-color-gray-dark-3;
+    }
+
+    .dark & {
+      color: $zorroa-color-gray-dark-4;
     }
 
     & .PreferencesPane__menu {
@@ -56,7 +36,11 @@ $sidebar-width: 240px;
   }
 
   &__menu-item {
-    padding: 10px 20px;
+    padding: 10px 0;
+
+    & & {
+      padding: 10px 20px;
+    }
 
     &--active {
       color: $zorroa-color-black;
