--- a/src/components/Form/Button.scss
+++ b/src/components/Form/Button.scss
@@ -20,6 +20,12 @@
     border-color: $zorroa-color-gray-dark-4;
   }
 
+  &__icon {
+    padding-right: 5px;
+    font-size: 14px;
+    line-height: 12px;
+  }
+
   ~ .FormButton {
     margin-left: 20px;
   }
@@ -72,6 +78,8 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    font-size: 12px;
+    font-weight: normal;
   }
 
   &__state {
@@ -139,6 +147,10 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+
+    &--mini {
+      font-weight: 300;
+    }
 
     &--state-active {
       transform: translateX(15px);
