EVI-333: Disable 'pretty' scrollbars to make resizer work again (#728)

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -13,11 +13,6 @@
   min-width: 60px;
 
   background-color: $zorroa-nearwhite;
-  overflow: hidden;
-
-  &:hover {
-    overflow-y: auto;
-  }
 
   .dark & { background-color: $zorroa-nearblack; }
 
@@ -41,6 +36,9 @@
       padding-left: 10px;
       padding-right: 10px;
     }
+
+    overflow-x: hidden;
+    overflow-y: auto;
 
     @include flexOn;
   }
