--- a/src/components/Inspector/FlipbookViewer.scss
+++ b/src/components/Inspector/FlipbookViewer.scss
@@ -26,6 +26,9 @@ $film-strip-grabber-height: $zorroa-metric-base * 3;
     justify-items: center;
     text-align: center;
     justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 
   &__pan-zoom {
