--- a/src/components/ProgressCircle/ProgressCircle.scss
+++ b/src/components/ProgressCircle/ProgressCircle.scss
@@ -14,6 +14,7 @@
 
   .text {
     font-size: 18px;
-    fill: $zorroa-gray;
+    fill: $zorroa-color-white;
+    text-shadow: 1px 1px 1px $zorroa-color-black;
   }
 }
