EVI-14, EVI-463: Hide downloads link based on permissions (#781)
* Fix linting problems

* Remove unused functions

--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -69,6 +69,17 @@
     color: $zorroa-sickly-green;
     cursor: pointer;
   }
+
+  &--disabled {
+    pointer-events: none;
+    opacity: .1;
+    cursor: not-allowed;
+  }
+
+  &--loading {
+    pointer-events: none;
+    cursor: wait;
+  }
 }
 
 .Lightbar-action-text {
