--- a/src/components/Inspector/FlipbookViewer.scss
+++ b/src/components/Inspector/FlipbookViewer.scss
@@ -16,6 +16,7 @@ $film-strip-grabber-height: $zorroa-metric-base * 3;
     flex-direction: column;
     height: 100%;
     width: 100%;
+    flex-shrink: 1000;
   }
 
   &__loading-status {
