EVI-607, EVI-580, EVI-369: Add support for white labeling (#792)
* EVI-566: Avoid crash when zoom settings are not set

* EVI-566: Avoid crash when zoom settings are not set

* Basic read only version of a logo

* Update tests to relfect the new connected component pattern

* Use correct primative names

* Put in base for theme configuration from admin pane

* Working on admin UI:

* Check for color errors

* Checkpoint commit

* Add tests

* 100% coverage

* Sync theme changes with B/E

* Fix unit test

* Customize colors in Racetrack, Checkbox and Buttons

* Checkpoint commit

* Implement UI in sidebar

* Restore Map.js

* Request new theme once the user becomes authenticated

* Add loading state indicators to submit button

* Fix default save state to be success

* EVI-607: Designer feedbcak

* Add better whitespacing

* Add rollover effect to quick add widget

--- a/src/components/Form/Button.scss
+++ b/src/components/Form/Button.scss
@@ -18,6 +18,11 @@
   &:hover {
     background-color: $zorroa-color-gray-dark-4;
     border-color: $zorroa-color-gray-dark-4;
+    opacity: 1;
+  }
+
+  &--white-label {
+    opacity: .9
   }
 
   &__icon {
