--- a/src/components/ModalOverlay/ModalOverlay.scss
+++ b/src/components/ModalOverlay/ModalOverlay.scss
@@ -37,6 +37,7 @@
     height: $content-height;
     width: $content-width;
     max-width: $content-max-width;
+    max-height: $zorroa-metric-base * 112;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     overflow: hidden;
