--- a/src/components/Racetrack/QuickAddWidget.scss
+++ b/src/components/Racetrack/QuickAddWidget.scss
@@ -53,6 +53,12 @@
   background-color: $zorroa-sickly-green;
   padding: 5px;
   margin-left: 2px;
+  opacity: .9;
+
+  &:hover,
+  &:focus {
+    opacity: 1;
+  }
 }
 
 .QuickAddWidget-input {
