--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -1,92 +1,60 @@
 @import '../../styles/core-mixins.scss';
+@import '../../styles/colors.scss';
 
 .DropdownMenu {
-  box-sizing: border-box;
-  display: inline-block;
-  position:relative;
+  background: $zorroa-color-white;
+  box-shadow: 0 4px 6px rgba($zorroa-color-black, 0.2);
 
-  .dark & { color: $zorroa-whitegray; }
+  &--dark {
+    background: $zorroa-color-black;
+    box-shadow: 0 4px 6px rgba($zorroa-color-black, 0.9);
+  }
 
-  .DropdownMenu-button {
-    @include flexRowCenter;
-    flex-wrap: nowrap;
-    @include clampText;
-    @include noSelect;
+  &__group {
+    padding: $zorroa-metric-base / 2 0;
+    border: 0 solid $zorroa-color-gray-light-2;
 
-    // -webkit-appearance: button;
-    //background-color: #fff;
-    border: 1px solid transparent;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size: 14px;
+    &--dark {
+      border-color: $zorroa-color-gray-dark-2;
+    }
+
+    & ~ .DropdownMenu__group {
+      border-top-width: 1px;
+    }
+  }
+
+  &__font-icon {
+    margin-right: $zorroa-metric-base;
+  }
+
+  &__item {
+    padding: $zorroa-metric-base $zorroa-metric-base * 2;
     white-space: nowrap;
-    text-transform: uppercase;
-    padding: 5px;
-    border-radius: 3px;
+    color: $zorroa-color-gray-dark-2;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
 
-    &:focus {
-      outline: none;
-    }
     &:hover {
-      background-color: white;
-      .dark & { color: $zorroa-whitegray; background-color: $zorroa-dimgray; }
+      background-color: $zorroa-color-gray-light-2;
     }
-  }
 
-  .DropdownMenu-list {
-    background-clip: padding-box;
-    background-color: #fff;
-    border-radius: 4px;
-    box-sizing: border-box;
-    list-style-type: none;
-    margin: 16px 0 0;
-    padding: 15px 12px;
-    position: absolute;
-    text-align: left;
-    top: 100%;
-    right: 0;
-    z-index: 1000;
-    box-shadow: 0 0 30px 0 $zorroa-nearblack;
-    min-width: 100px;
-    .dark & { color: $zorroa-whitegray; background-color: $zorroa-greyish-brown; }
-  }
+    &--dark {
+      color: $zorroa-color-gray-light-2;
 
-  .DropdownMenu-item {
-    line-height: 1.5;
-    & > * { padding: 8px; }
-    width: 100%;
-    height: 100%;
-    text-transform: uppercase;
-    border-radius: 3px;
-    @include clampText;
-    @include noSelect;
-    &:not(.DropdownMenu-separator) {
-      cursor: pointer;
       &:hover {
-        background-color: $zorroa-nearwhite;
-        .dark & { color: $zorroa-whitegray; background-color: $zorroa-dimgray; }
+        background-color: $zorroa-color-gray-dark-2;
       }
     }
-  }
 
-  a {
-    cursor: pointer;
-    color: $zorroa-darkgray;
-    .dark & { color: $zorroa-whitegray; }
-    font-size: 1rem;
-  }
-
-  .DropdownMenu-caret {
-    font-size: 10px;
-    padding: 5px;
-    color: $zorroa-gray;
-    .dark & { color: $zorroa-whitegray; }
-  }
-
-  .DropdownMenu-separator {
-    height: 1px;
-    background-color: white;
-    .dark & { background-color: $zorroa-dimgray; }
-    padding: 0;
+    &--disabled {
+      opacity: .5;
+      cursor: not-allowed;
+      &:hover {
+        background-color: transparent;
+      }
+    }
   }
 }
