--- a/src/components/Collapsible/CollapsibleHeader.scss
+++ b/src/components/Collapsible/CollapsibleHeader.scss
@@ -1,7 +1,7 @@
 @import '../../styles/core-mixins.scss';
 
 .Collapsible {
-  .scroller > & { margin-bottom: 7px; }
+  .scroller > & { margin-bottom: 7px; margin-left: 5px; margin-right: 5px; }
   border-radius: 3px;
   overflow:hidden;
 }
@@ -41,6 +41,7 @@
     @include flexJustifyCenter;
   }
   &.isSelected { background-color: $zorroa-navy-blue; }
+
 }
 
 .CollapsibleHeader-icon {
